--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
     </script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6017523276345239"
      crossorigin="anonymous"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-S19Z5VD491"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-S19Z5VD491');
+</script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <meta name="description" content="OFFICIAL WEBSITE FOR LYNX STUDIOS SERVICES">
